# elt-pipeline-aws-medallion

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INCREMENTAL_STRATEGY.md  LICENSE  Makefile  README.md  dbt_project.yml  packages.yml  profiles_example.yml  pyproject.toml  run_dbt.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adr_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/chatmodes/: mentor.chatmode.md
.github/instructions/: airflow.instructions.md  commits-prs.instructions.md  cost-awareness.instructions.md  data-modeling.instructions.md  data-quality.instructions.md  dbt.instructions.md  naming-conventions.instructions.md  observability.instructions.md  python.instructions.md  security.instructions.md  sql-athena.instructions.md  terraform.instructions.md  testing.instructions.md
.github/workflows/: .gitkeep  compose-validate.yml  data-generator-tests.yml  dbt-ci.yml  secrets-scan.yml  terraform-ci.yml
airflow/: README.md  docker-compose.yml
airflow/dags/: .gitkeep  dag_dbt_aws_detailed.py  dag_synthetic_source.py
airflow/dags/utils/: callbacks.py
airflow/plugins/: .gitkeep
data-generator/: README.md
data-generator/tests/: __init__.py  test_orchestrator.py  test_s3_writer.py  test_schemas.py  test_writers.py
dbt/: README.md  dbt_project.yml  profiles_example.yml
dbt/macros/: generate_schema_name.sql
dbt/tests/: assert_dre_unit_01_sem_vazamento_tenant.sql  assert_fct_vendas_total_consistente.sql  assert_inadimplentes_dias_atraso_positivo.sql
docs/: ARCHITECTURE_AWS.md  CI_CD.md  COST_ESTIMATE.md  DATA_MODEL.md  INTERVIEW_NARRATIVE.md  MEDALLION_LAYERS.md  MIGRATION_FROM_AZURE.md  PROJECT_BLUEPRINT.md  README.md  RUNBOOK.md  SOURCE_DATA_GENERATOR.md  SPRINT_ROADMAP.md  TECHNOLOGIES.md
docs/adr/: 0001-iceberg-vs-delta.md  0002-athena-vs-emr.md  0003-airflow-local-vs-mwaa.md  0004-synthetic-data.md  0005-monorepo-structure.md
infra/: README.md
lambda/slack_notifier/: handler.py
macros/: clean_projeto_sup.sql  union_sources.sql
seeds/: ajustes_DRE_unit_01.csv  ajustes_DRE_unit_02.csv  d_danfe_status.csv  d_estrutura_dre_contabil_unit_01.csv  d_estrutura_dre_contabil_unit_02.csv  empresas_grupo.csv  meta_ajustes_DRE_unit_01.csv  orcamento_unit_01.csv  orcamento_unit_02.csv  properties.yml
(+147 files in other folders)
