[tool.poetry]
name = "elt-pipeline-aws-medallion"
version = "0.1.0"
description = "Multi-tenant ELT pipeline — Medallion Architecture on AWS (S3 + Iceberg + Athena + Glue + Airflow + dbt)"
authors = ["Vhmac <euvhmendes@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Dependencies will be added per sprint (Sprint 1: data-generator; Sprint 4: dbt-athena)

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.4.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
