[tool.poetry]
name = "elt-pipeline-aws-medallion"
version = "0.1.0"
description = "Multi-tenant ELT pipeline — Medallion Architecture on AWS (S3 + Iceberg + Athena + Glue + Airflow + dbt)"
authors = ["Vhmac <euvhmendes@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# data-generator (Sprint 1)
pyarrow = "^17.0.0"
faker = "^28.0.0"
click = "^8.1.7"
python-dateutil = "^2.9.0"
# AWS (Sprint 3+, instalado ja para evitar churn)
boto3 = "^1.35.0"
# dbt (Sprint 4)
dbt-core = "~1.9.0"
dbt-athena-community = "~1.9.0"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.4.2"
pre-commit = "^4.2.0"
pytest = "^8.3.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------- Ruff ----------
[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["airflow/logs", "data-generator/output"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["data-generator/tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
